[package]
name = "grrs"
version = "0.1.0"
edition = "2024"
description = "A simple grep-like tool"
authors = ["katoy <youichikato@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/katoy/grrs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
